--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -389,14 +389,24 @@ Con esto se finaliza la demostración del teorema \ref{teorema principal} en la 
 
 \section{Significado físico}
 
-Distancia de traza esta medida cuantifica que tan difícil es diferenciar $\rho_{S}$ y $\Omega_{S}$ por mediciones cuánticas.
+El teorema anterior ya permite hablar del concepto importante que se sigue del aritculo de Popescu et al. la idea general del a física es poder dar una relación uno a uno entre las propiedades de un objeto físico y su representación matemática con esta correspondencia se puede decir que la teoría esta completa cuando todas las propiedades que son posibles de medir tienen su semejante en la teoría. Por ejemplo en la física clásica a las cantidades como velocidad y distancia se le asigna los símbolos matemáticos $v$ y $x$, el cuerpo puede ser especificado dando estas dos cantidades en un tiempo determinado. La mecánica clásica nos da un ejemplo sencillo pero cuando se pasa a la mecánica estadística se encuentra perspectivas diferentes que entran en conflicto con esta sencilla idea. En los inicios de la mecánica estadística hubo muchas controversias dado a que ahora la idea determinista que Newton y otros habían mostrado como ciertas (Se podía describir la naturaleza de manera predecible) ahora se introducía la probabilidad a sistemas que según Newton eran deterministas. En este punto se debe hacer claro que la necesidad de la probabilidad era por la falta de conocimiento pero no por un indeterminismo intrínseco como en la mecánica cuántica. Dos propuestas importantes surgieron en busca de una base conceptual sobre estas probabilidades, la visión de Gibbs y la de Boltzmann. Gibbs propuso la idea del ensamble, esta es una idea que hasta el día de hoy se sigue usando porque da los resultados correctos para las propiedades de sistemas termodinámicos.\\
+La idea de Gibbs es la siguiente: Se tiene un sistema macroscópico con ciertos parámetros que se pueden medir. Este sistema está compuesto por varias partículas que tienen posiciones y momentos, pero estas propiedades están restringidas por los parámetros macroscópicos. Entonces como no se puede conocer el microestado del sistemas, no se puede medir cada posición y momento de cada partícula, se tiene una libertad sobre cuál es el microestado dado el macroestado. El ensamble es el conjunto de microestados que cumplen con el macroestado, mientras el microestado cumpla con los parámetros macroscópicos hará parte del ensamble así el sistema no se encuentre en ese microestado. En teoría no hay limitación sobre el número de microestados que pertenezcan a un ensamble, este puede tener infinitos microestados. Esta idea de base para la función de densidad en el espacio de fase, cada punto en este espacio es un microestado estos micro estados no interactuan entre ellos , con esto se puede construir la mecánica estadística que se conoce. 
+\\
+Por el contrario Boltzmann da un concepción de la mecánica estadística más intuitiva; él propone $N$ partículas que interactúan entre ellas y cumplen los parámetros macroscópicos. Las partículas no son imaginarias como en el caso de los ensambles de Gibbs, ellas son las partículas que están en el sistema que se está estudiando. Se esperaría que la solución de Boltzmann fuera la que diera los resultados correctos dada la sencillez de su propuesta pero es la formulación de Gibbs la que da la termodinámica correcta. E.T Jaynes en () muestra las diferencias matemáticas de cada perspectiva y llega a la conclusión que la formulación de Gibbs da la entropía correcta sin importar cual sea el tipo de interacción que tenga el sistema, además encuentra que la entropía que sale de la formulación Boltzmanniana no es la misma entropía dada por la termodinámica,la entropía de Boltzmann es correcta cuando no hay interacción entre las partículas.
+\\
+Ya con la comprobación experimental se debería aceptar la perspectiva de Gibbs como la correcta y dejar a un lado la de boltzmann pero esto deja a la mecánica estadística en un contexto filosófico poco fuerte, aunque la física busque una correspondencia entre experimento y teoría no se puede aceptar cualquier teoría solo por tener congruencia con el experimento, la física debe buscar una estabilidad conceptual en sus teorías.¿ Por qué la perspectiva de Gibbs tiene un fundamento congruente ?  lo que propone Gibbs aunque matemáticamente aceptable se basa en todos los microestados en los que el macroestado no se encuentra es decir, que para poder determinar la propiedades de estado el cual se está estudiando se debe estudiar todos los estados en los que el sistema no se encuentra pero podría estar, pero por qué para analizar un sistema que se encuentra en un estado definido y exacto debería examinar los posibles infinitos estado en donde no se encuentra. Este problema ontológico deja la perspectiva de Gibbs en duda, mientra la de Boltzmann habla del sistema que se examina sin ningún problema de este estilo. 
+\\
+La lucha entre las perspectiva ha sido una de aún no se resuelve lo que se ha mostrado hasta ahora ha sido la matemática de la tentativa de unir ambas perspectivas por Popescu et al. pero ¿ por qué estos resultado matemáticos intentan dar una luz a la resolución de estas perspectivas?
+\\
+%--------------
+%Distancia de traza esta medida cuantifica que tan difícil es diferenciar $\rho_{S}$ y $\Omega_{S}$ por mediciones cuánticas.
 
-Ya con esto se le da un significado cuantitativo de lo que se ha ido explicando hasta ahora. Además también se dan unas cotas explícitas a cuando se habla de la "mayoría" de los estados. Se tiene una cota exponencialmente pequeña  sobre la probabilidad de encontrar un estado lejano del canónico.\\ %(Dar comentario sobre lo intuitivo de las cotas)\\
+%Ya con esto se le da un significado cuantitativo de lo que se ha ido explicando hasta ahora. Además también se dan unas cotas explícitas a cuando se habla de la "mayoría" de los estados. Se tiene una cota exponencialmente pequeña  sobre la probabilidad de encontrar un estado lejano del canónico.\\ %(Dar comentario sobre lo intuitivo de las cotas)\\
 
-Una de tantas dificultades en la mecánica estadística es que sus principios se formulan desde la ignorancia subjetiva y los promedios de ensamble. Estos son principios físicos bastantes discutible.
-Recientemente se ha dado cuenta que los promedio de ensamble y la ignorancia subjetiva no son necesarios, Porque sistemas cuánticos individuales pueden mostrar características estadísticas. Esto es debido al entrelazamiento lo cual es un efecto cuántico, esto hace que la falta de conocimiento ya no sea subjetiva sino objetiva. Por la teoría cuántica se sabe que aunque se tenga todo el sistema descrito por la función de onda, la cual da un conocimiento completo del sistema, los subsistemas de este pueden seguir en un estado desconocido. De forma más específica el sistema puede estar en un estado puro mientras que un subsistema puede estar en un estado mixto. En este caso no se puede conocer el subsistema ya que este se comporta como una densidad de probabilidad. La comparación con la contraparte clásica es sorprendente porque tener un conocimiento completo del sistema clásico es saber cualquier subsistema. Luego si se aplica una teoría clásica las probabilidades aparecen como falta del conocimiento posible de obtener, si se llega a conocer todo no abrían probabilidades.
-Ya con resultados del capítulo anterior sobre: la mayoría de los estados puros de un sistema los subsistemas(suficientemente pequeños) están en un estado canónico
-
+%Una de tantas dificultades en la mecánica estadística es que sus principios se formulan desde la ignorancia subjetiva y los promedios de ensamble. Estos son principios físicos bastantes discutible.
+%Recientemente se ha dado cuenta que los promedio de ensamble y la ignorancia subjetiva no son necesarios, Porque sistemas cuánticos individuales pueden mostrar características estadísticas. Esto es debido al entrelazamiento lo cual es un efecto cuántico, esto hace que la falta de conocimiento ya no sea subjetiva sino objetiva. Por la teoría cuántica se sabe que aunque se tenga todo el sistema descrito por la función de onda, la cual da un conocimiento completo del sistema, los subsistemas de este pueden seguir en un estado desconocido. De forma más específica el sistema puede estar en un estado puro mientras que un subsistema puede estar en un estado mixto. En este caso no se puede conocer el subsistema ya que este se comporta como una densidad de probabilidad. La comparación con la contraparte clásica es sorprendente porque tener un conocimiento completo del sistema clásico es saber cualquier subsistema. Luego si se aplica una teoría clásica las probabilidades aparecen como falta del conocimiento posible de obtener, si se llega a conocer todo no abrían probabilidades.
+%Ya con resultados del capítulo anterior sobre: la mayoría de los estados puros de un sistema los subsistemas(suficientemente pequeños) están en un estado canónico
+%----------------
 
 
 
