tabla de contenidos

--- a/main.tex
+++ b/main.tex
@@ -167,7 +167,7 @@
 %	TABLA DE CONTENIDOS
 %---------------------------------------------------------------------------------------
 
-%\tableofcontents
+\tableofcontents
 
 
 %----------------------------------------------------------------------------------------
@@ -184,8 +184,13 @@
 \thispagestyle{empty}
 \include{Capitulos/cap3}
 \thispagestyle{empty}
+\include{Capitulos/cap4}
+\thispagestyle{empty}
+\include{Capitulos/cap5}
+\thispagestyle{empty}
 \include{Capitulos/Conclusiones}
 \thispagestyle{empty}
+
 
 
 %----------------------------------------------------------------------------------------
