--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -72,7 +72,7 @@ Esta distancia de traza se relaciona con la distancia de norma de manera sencill
 
 Teniendo ya una forma de darle sentido al concepto de que dos estados son cercanos entonces se puede plantear el teorema central de este capítulo:
 \\
-\begin{theorem} \label{cap2 teorema principal}
+\begin{theorem} \label{teorema principal}
 Para un estado escogido de manera aleatoria $\ket{\phi} \in \mathcal{H}_{R} \subseteq \mathcal{H}_{S} \otimes \mathcal{H}_{E} $ y un $\epsilon > 0$ arbitrario, la distancia entre la matriz densidad reducida del sistema $\rho_{S}=\Tr_{E}(\ket{\phi} \bra{\phi})$  y el estado canónico $\Omega_{S}=\Tr_{E} ( \mathcal{E}_{R})$ esta dado probabilísticamente por 
 
 \begin{equation}
@@ -98,10 +98,10 @@ d_{E}^{eff}= \frac{1}{\Tr \Omega_{E}^{2}} \ge \frac{d_{R}}{d_{S}}.
 Donde $\Omega_{E}= \Tr_{S} \mathcal{E}_{R}$. Ambas cantidades $\eta $ y $\eta'$ serán pequeñas esto implica que el estado estará cercano al estado canónico con alta probabilidad cuando la dimensión efectiva del ambiente sea mucho más grande que la del sistema ( es decir $d_{E}^{eff} >> d_{S}$) y  $d_{R}\epsilon^2>>1>>\epsilon$. Esta última condición se puede asegurar cuando el espacio accesible total es grande ( es decir $d_{R}>>1$), escogiendo $\epsilon=d_{R}^{-\frac{1}{3}}$.\\
 \end{theorem}
 
-\subsection{Lema de Levy} \label{cap2 levy}
+\subsection{Lema de Levy} \label{ levy}
 Para poder demostrar el teorema \ref{teorema principal} se usará  el lema de Levy. Este dice que al seleccionar un punto $\phi$ aleatoriamente de una hiperesfera de dimensión alta y que $f(\phi)$ no cambie muy rápido, entonces $f(\phi) \approx \langle f \rangle $ con alta probabilidad, Más exactamente:\\
 
-\begin{lemma} \label{cap2 lemma de levy}
+\begin{lemma} \label{lemma de levy}
 
 Dada una función $f: \mathbb{S}^d \to \mathbb{R} $ definida en la hiperesfera d-dimensional $\mathbb{S}^d$ , y un punto $\phi \in \mathbb{S}^d $ es escogido de manera uniformemente aleatoria,
 \begin{equation}
@@ -394,19 +394,12 @@ La idea de Gibbs es la siguiente: Se tiene un sistema macroscópico con ciertos 
 \\
 Por el contrario Boltzmann da un concepción de la mecánica estadística más intuitiva; él propone $N$ partículas que interactúan entre ellas y cumplen los parámetros macroscópicos. Las partículas no son imaginarias como en el caso de los ensambles de Gibbs, ellas son las partículas que están en el sistema que se está estudiando. Se esperaría que la solución de Boltzmann fuera la que diera los resultados correctos dada la sencillez de su propuesta pero es la formulación de Gibbs la que da la termodinámica correcta. E.T Jaynes en () muestra las diferencias matemáticas de cada perspectiva y llega a la conclusión que la formulación de Gibbs da la entropía correcta sin importar cual sea el tipo de interacción que tenga el sistema, además encuentra que la entropía que sale de la formulación Boltzmanniana no es la misma entropía dada por la termodinámica,la entropía de Boltzmann es correcta cuando no hay interacción entre las partículas.
 \\
-Ya con la comprobación experimental se debería aceptar la perspectiva de Gibbs como la correcta y dejar a un lado la de boltzmann pero esto deja a la mecánica estadística en un contexto filosófico poco fuerte, aunque la física busque una correspondencia entre experimento y teoría no se puede aceptar cualquier teoría solo por tener congruencia con el experimento, la física debe buscar una estabilidad conceptual en sus teorías.¿ Por qué la perspectiva de Gibbs tiene un fundamento congruente ?  lo que propone Gibbs aunque matemáticamente aceptable se basa en todos los microestados en los que el macroestado no se encuentra es decir, que para poder determinar la propiedades de estado el cual se está estudiando se debe estudiar todos los estados en los que el sistema no se encuentra pero podría estar, pero por qué para analizar un sistema que se encuentra en un estado definido y exacto debería examinar los posibles infinitos estado en donde no se encuentra. Este problema ontológico deja la perspectiva de Gibbs en duda, mientra la de Boltzmann habla del sistema que se examina sin ningún problema de este estilo. 
+Ya con la comprobación experimental se debería aceptar la perspectiva de Gibbs como la correcta y dejar a un lado la de boltzmann pero esto deja a la mecánica estadística en un contexto filosófico poco fuerte, aunque la física busque una correspondencia entre experimento y teoría no se puede aceptar cualquier teoría solo por tener congruencia con el experimento, la física debe buscar una estabilidad conceptual en sus teorías.¿ Por qué la perspectiva de Gibbs tiene un fundamento congruente ?  lo que propone Gibbs aunque matemáticamente aceptable se basa en todos los microestados en los que el macroestado no se encuentra es decir, que para poder determinar la propiedades de estado el cual se está estudiando se debe estudiar todos los estados en los que el sistema no se encuentra pero podría estar, pero por qué para analizar un sistema que se encuentra en un estado definido y exacto debería examinar los posibles infinitos estado en donde no se encuentra si se hace un promedio sobre estos microestados ¿ cuál es el significado de este promedio?. Este problema ontológico deja la perspectiva de Gibbs en duda, mientra la de Boltzmann habla del sistema que se examina sin ningún problema de este estilo. 
 \\
-La lucha entre las perspectiva ha sido una de aún no se resuelve lo que se ha mostrado hasta ahora ha sido la matemática de la tentativa de unir ambas perspectivas por Popescu et al. pero ¿ por qué estos resultado matemáticos intentan dar una luz a la resolución de estas perspectivas?
+La lucha entre las perspectiva ha sido una de aún no se resuelve lo que se ha mostrado hasta ahora ha sido la matemática de la tentativa de unir ambas perspectivas por Popescu et al. pero ¿ por qué estos resultado matemáticos intentan dar una luz a la resolución de estas perspectivas? se puede ver fácilmente que cuando se habla de del estado $ \Omega_{S} = \Tr_{B} \mathcal{E}_{R} $  este condensa la perspectiva de Gibbs mientras que $\rho_{S} = \Tr_{E} \ket{\phi} \bra{\phi}$ habla de un subsistema específico bajo una restricción esta es la perspectiva de Boltzmann por lo tanto el resultado mostrado acá dice: a menos que se tenga un estado bastante especial se puede asegurar que el subsistema de un universo muy grande, dado por un estado puro, se comporta de la misma manera que si el universo se encontrara en un estado máximamente mezclado. Esto corresponde a decir que para la mayoría de los estados en un espacio de Hilbert se puede reconciliar ambas perspectivas.
 \\
-%--------------
-%Distancia de traza esta medida cuantifica que tan difícil es diferenciar $\rho_{S}$ y $\Omega_{S}$ por mediciones cuánticas.
+Hay otro punto que da más mérito a la perspectiva mostrada acá y es que el estado $\Omega_{S}$ es la forma de mostrar la ignorancia subjetiva que se tiene del sistema. Se sabe que este es el punto de partida para la mecánica estadística pero esto también es un fundamento que generalmente es muy cuestionado gracias al teorema \ref{teorema principal} se cambia esa probabilidad subjetiva por una objetivad debido al entrelazamiento. Por este cambio a un fundamente más sólido no se debe entrar en el problema de ergodicidad ya que en general la solución del problema de esa probabilidad se dice que el sistema pasa por todos los estados,y eso solo complica la pregunta dado que hay sistemas que no pasan por todos los estados pero aún así son descritos por un estado canónico. Ya no debe entrarse en la pregunta sobre la ergodicidad del sistema dado que esta perspectiva muestra que los promedios no son necesarios en el momento de darle un fundamento a la mecánica estadística.
 
-%Ya con esto se le da un significado cuantitativo de lo que se ha ido explicando hasta ahora. Además también se dan unas cotas explícitas a cuando se habla de la "mayoría" de los estados. Se tiene una cota exponencialmente pequeña  sobre la probabilidad de encontrar un estado lejano del canónico.\\ %(Dar comentario sobre lo intuitivo de las cotas)\\
-
-%Una de tantas dificultades en la mecánica estadística es que sus principios se formulan desde la ignorancia subjetiva y los promedios de ensamble. Estos son principios físicos bastantes discutible.
-%Recientemente se ha dado cuenta que los promedio de ensamble y la ignorancia subjetiva no son necesarios, Porque sistemas cuánticos individuales pueden mostrar características estadísticas. Esto es debido al entrelazamiento lo cual es un efecto cuántico, esto hace que la falta de conocimiento ya no sea subjetiva sino objetiva. Por la teoría cuántica se sabe que aunque se tenga todo el sistema descrito por la función de onda, la cual da un conocimiento completo del sistema, los subsistemas de este pueden seguir en un estado desconocido. De forma más específica el sistema puede estar en un estado puro mientras que un subsistema puede estar en un estado mixto. En este caso no se puede conocer el subsistema ya que este se comporta como una densidad de probabilidad. La comparación con la contraparte clásica es sorprendente porque tener un conocimiento completo del sistema clásico es saber cualquier subsistema. Luego si se aplica una teoría clásica las probabilidades aparecen como falta del conocimiento posible de obtener, si se llega a conocer todo no abrían probabilidades.
-%Ya con resultados del capítulo anterior sobre: la mayoría de los estados puros de un sistema los subsistemas(suficientemente pequeños) están en un estado canónico
-%----------------
 
 
 
