--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -274,7 +274,7 @@ Lo trabajado anteriormente muestra cómo susbsistemas de dimensión pequeña en 
 \\
 El teorema siguiente prueba que para casi todos los estados en un subsistema restringido llevan al mismo estado de equilibrio.
 
-\begin{theorem}
+\begin{theorem} \label{mismo estado}
 \begin{enumerate}
 \item Casi todos los estados iniciales de un subespacio restringido bastante grande llevan al mismo estado de equilibrio de un subsistema pequeño. En particula, con $\langle .\rangle_{\psi}$ siendo el promedio sobre estados puros aleatoriamente uniformes $\ket{\psi(0)} \in \mathcal{H}_{R} \subset \mathcal{H}_{S} \otimes \mathcal{H}_{B}$ y $\Omega_{S}= \langle \omega_{S}^{\psi} \rangle_{\psi}$ :
 \begin{equation}
@@ -335,7 +335,9 @@ entonces la constante de Lipschitz satisface $\eta \leq 1$. Sustituyendo en el l
 Para un estado inicial que sea el producto del estado del sistema y el del ambiente $\ket{\psi}_{SB}= \ket{\psi}_{S} \ket{\phi}_{B}$ en el espacio $\mathcal{H}_{R}=\ket{\psi} \otimes \mathcal{H}_{R}^{B}$ se mostró que para estados genéricos el ambiente causa que el subsistema se equilibre aunque el estado de equilibrio $\omega_{S}^{\psi}$ del subsistema podría  depender del estado inicial del baño $\ket{\phi}_{B}$. Esto no es así y casi todos los estados del baño en $\mathcal{H}_{B}^{R}$ llevan al mismo estado de equilibrio del subsistema simplemente usando el resultado anterior a  $\mathcal{H}_{B} = \ket{\psi}\otimes \mathcal{H}_{R}^{B}$ y luego $d_{R} = d_{R}^{B}$, si $d_{R}^{B} \gg d_{S}$ para casi todos los estados iniciales del baño llevarán al subsistema al mismo estado de equilibrio $\omega_{S}$. como se usó la cota menos estricta este resultado no depende de la forma explícita de los estados de energías propios.
 \\
 
+\section{Conclusión}
 
+El nuevo enfoque dado en el capítulo anterior fue explorado aún más en este viendo qué ocurre con los sistemas al evolucionar ver que este enfoque es fructífero  en resultados y se puede seguir profundizando da una buena imagen además de un interés para que se siga explorando. En este capítulo se mostró que la mayoría de estados en el espacio de Hilbert llegan a fluctuar durante gran parte del tiempo alrededor del mismo estado promediado temporalmente. Aunque primero se propone esto luego se asegura que esto es cierto no importa cual sea el estado \ref{mismo estado}. 
 
 %-----------------------------
 %\textbf{Independenciadelestado del sistema}: Como yase hadicho el subsistema en contacto con el baño llega al equilibrio sin importar su estado inicial pero sí depende del baño. Este resultado no se pudo resolver pero se da más indicios.
