--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -337,7 +337,7 @@ Para un estado inicial que sea el producto del estado del sistema y el del ambie
 
 \section{Conclusión}
 
-El nuevo enfoque dado en el capítulo anterior fue explorado aún más en este viendo qué ocurre con los sistemas al evolucionar ver que este enfoque es fructífero  en resultados y se puede seguir profundizando da una buena imagen además de un interés para que se siga explorando. En este capítulo se mostró que la mayoría de estados en el espacio de Hilbert llegan a fluctuar durante gran parte del tiempo alrededor del mismo estado promediado temporalmente. Aunque primero se propone esto luego se asegura que esto es cierto no importa cual sea el estado \ref{mismo estado}. 
+El nuevo enfoque dado en el capítulo anterior fue explorado aún más en este viendo qué ocurre con los sistemas al evolucionar ver que este enfoque es fructífero  en resultados y se puede seguir profundizando genera un interés para que se siga explorando. En este capítulo se mostró que la mayoría de estados en el espacio de Hilbert llegan a fluctuar durante gran parte del tiempo alrededor del mismo estado promediado temporalmente. Aunque primero se prueba con el estado temporalmente promediado luego se asegura que generalmente los estados tienen un mismo estado de equilibrio y este es su estado temporalmente promediado. Todo esto explora las dos primeras ideas sobre equilibrio, que un estado se encuentre en un mismo estado duran mucho tiempo y la independencia del 
 
 %-----------------------------
 %\textbf{Independenciadelestado del sistema}: Como yase hadicho el subsistema en contacto con el baño llega al equilibrio sin importar su estado inicial pero sí depende del baño. Este resultado no se pudo resolver pero se da más indicios.
