--- a/main.tex
+++ b/main.tex
@@ -193,6 +193,7 @@
 
 
 
+
 %----------------------------------------------------------------------------------------
 %	APÉNDICES
 %----------------------------------------------------------------------------------------
@@ -214,14 +215,39 @@
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAFÍA
 %----------------------------------------------------------------------------------------
-\backmatter
-\nocite{*}
-\bibliographystyle{plain}
-\bibliography{bibliografía.bib} %Aquí ponen el nombre del archivo .bib
+%\backmatter
+%\nocite{*}
+%\bibliographystyle{unsrt}
+%\bibliography{bibliografia} %Aquí ponen el nombre del archivo .bib
+
+\begin{thebibliography}{10}
+\bibitem{Popescu2006} Popescu, S., Short, A., \& Winter, A. (2006). Entanglement and the foundations of statistical mechanics. Nature Physics, 2(11), 754-758. http://dx.doi.org/ 10.1038/nphys444.
+\bibitem{Goldstein} Goldstein, S., Lebowitz, J., Tumulka, R., \& Zanghì, N. (2006). Canonical Typicality. Physical Review Letters, 96(5). http://dx.doi.org/10.1103/physrevlett.96.050403
+\bibitem{LandauStat} Landau, L., Lifshits, E., Pitaevskii, L., Sykes, J., \& Kearsley, M. (1980). Statistical physics. Amsterdam: Elsevier Butterworth Heinemann.
+\bibitem{KardarStat}Kardar, M. (2007). cStatistical physics of particles. Cambridge: Cambridge University Press.
+\bibitem{PathriaStat}Pathria, R., \& Beale, P. (2012). Statistical mechanics. Beijing: World Publishing Corporation.
+\bibitem{HuangStat}Huang, K. (2005). Statistical mechanics. New York [u.a.]: Wiley.
+\bibitem{Decoherence}Schlosshauer, M. (2010). Decoherence and the quantum-to-classical transition. Berlin: Springer.
+\bibitem{CallenThermo}Callen, H. (1975). Thermodynamics. New York [etc.]: Wiley.
+\bibitem{ReichlStat}Reichl, L. (2016). A Modern Course in Statistical Physics. Weinheim: Wiley.
+\bibitem{SakuraiQuantum}Sakurai, J. (2013). Modern Quantum Mechanics. [S.l.]: Pearson Education India.
+\bibitem{KhinchinStat}Khinchin, A., \& Gamow, G. Mathematical foundations of statistical mechanics.
+\bibitem{TodaStat}Toda, M., Kubo, R., \& Saito, N. (1998). Statistical physics I. Berlin: Springer.
+\bibitem{WildeInformation}Wilde, M. Quantum information theory.
+\bibitem{NielsenInformation} Nielsen, M., \& Chuang, I. (2015). Quantum computation and quantum information. Cambridge: Cambridge University Press
+\bibitem{LangAlgebra}Lang, S. (1972). Linear algebra. Reading, Mass.: Addison-Wesley.
+\bibitem{VedralInformation}Vedral, V. (2013). Introduction to quantum information science. Oxford: Oxford University Press.
+\bibitem{JaynesEntropies}Jaynes, E. (1965). Gibbs vs Boltzmann Entropies. American Journal Of Physics, 33(5), 391-398. http://dx.doi.org/10.1119/1.1971557
+\bibitem{Lema}Vitali D. Milman., \& Gideon Schechtman. (1986). Asymptotic Theory of Finite Dimensional Normed Spaces. Springer Verlag.
+\bibitem{QuantumDistilation}Horodecki, M., Oppenheim, J., \& Winter, A. (2005). Partial quantum information. Nature, 436(7051), 673-676. http://dx.doi.org/10.1038/nature03909.
+\bibitem{LindenPaper}Linden, N., Popescu, S., Short, A., \& Winter, A. (2009). Quantum mechanical evolution towards thermal equilibrium. Physical Review E, 79(6). http://dx.doi.org/10.1103/physreve.79.061103.
+\bibitem{RenyiEntropia}Hayden, P., van Dam, W.(2002). "Renyi-entropic bounds on quantum communication", arXiv:quant-ph/0204093.
+
+\end{thebibliography}
 
 
 
-
+ 
 
 
 \end{document}
